--- a/assets/css/dataTables.css
+++ b/assets/css/dataTables.css
@@ -75,7 +75,7 @@ th:nth-child(3) {
 }
 
 td:nth-child(4),
-td:nth-child(5),
+td:nth-child(5),x
 td:nth-child(6),
 th:nth-child(4),
 th:nth-child(5),
@@ -87,7 +87,7 @@ th:nth-child(6) {
 .data-table{
   width: 100%;
   height: 100vh;
-  margin-top: 40px;
+  /* margin-top: 40px; */
   background-image: linear-gradient(#c751c0,#4458d0);
   padding: 40px;
 }
